# Project640

./: .gitignore  CMakeLists.txt  CMakeUserPathsGit.cmake  README.md
src/: DkAudioProcessor.cpp  DkAudioProcessor.h  DkEqualizer.cpp  DkEqualizer.h  DkLcdController.cpp  DkLcdController.h  DkMath.cpp  DkMath.h  DkSettings.cpp  DkSettings.h  DkUtils.cpp  DkUtils.h  main.cpp  project640.qrc  project640.rc  resource.h
